--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <title>Gestione cinema</title>
 </head>
 <body>
     <div id="root"></div>
